@@ -1,7 +1,7 @@
 // drumkv1.cpp
 //
 /****************************************************************************
-   Copyright (C) 2012, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2013, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -62,25 +62,32 @@ const float LFO_FREQ_MIN  = 0.4f;
 const float LFO_FREQ_MAX  = 40.0f;
 
 
+// hyperbolic-tangent fast approximation
+inline float drumkv1_tanhf ( const float x )
+{
+	const float x2 = x * x;
+	return x * (27.0f + x2) / (27.0f + 9.0f * x2);
+}
+
+
 // sigmoids
 
-inline float drumkv1_sigmoid ( const float x )
+inline float drumkv1_sigmoid0 ( const float x )
 {
 //	return 2.0f / (1.0f + ::expf(-5.0f * x)) - 1.0f;
-	return drumkv1_fx_tanhf(2.0f * x);
+//	return drumkv1_tanhf(2.0f * x);
+	if (x > +0.75f)
+		return +0.75f + 0.25f * drumkv1_tanhf(+4.0f * (x - 0.75f));
+	else
+	if (x < -0.75f)
+		return -0.75f - 0.25f * drumkv1_tanhf(-4.0f * (x + 0.75f));
+	else
+		return x;
 }
 
-inline float drumkv1_sigmoid0 ( const float x, const float t )
+inline float drumkv1_sigmoid1 ( const float x )
 {
-	const float t0 = t - 1.0f;
-	const float t1 = 1.0f - t;
-
-	return (x < t0 ? t0 : (x > t1 ? t1 : x * (1.5f - 0.5f * x * x)));
-}
-
-inline float drumkv1_sigmoid1 ( const float x, const float t = 0.001f )
-{
-	return 0.5f * (1.0f + drumkv1_sigmoid0(2.0f * x - 1.0f, t));
+	return 0.5f * (1.0f + drumkv1_sigmoid0(2.0f * x - 1.0f));
 }
 
 
@@ -1545,7 +1552,7 @@ void drumkv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 		// limiter
 		if (int(*m_dyn.limiter) > 0) {
 			for (uint32_t n = 0; n < nframes; ++n)
-				*out++ = drumkv1_sigmoid(*in++);
+				*out++ = drumkv1_sigmoid0(*in++);
 		}
 	}
 }
