@@ -5,6 +5,7 @@ ChangeLog
 
 SVN TRUNK
 
+- Redefined wave-shaping/sigmoid compressor and limiter fx.
 - Experimental LV2 Time designated port support (Delay BPM). 
 - Preparations for Qt5 migration. (TESTING)
 
